--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -146,10 +146,10 @@ const finalContent =
                 >
                   <div class="flex items-start justify-between gap-6">
                     <div class="flex items-start gap-3 flex-1 min-w-0">
-                      <div class="flex-shrink-0 w-10 h-10 bg-green-500/10 rounded-lg flex items-center justify-center mt-1">
+                      <div class="flex-shrink-0 w-10 h-10 bg-bullish-500/10 rounded-lg flex items-center justify-center mt-1">
                         <Icon
                           id="material-symbols-article"
-                          className="w-5 h-5 text-green-400"
+                          className="w-5 h-5 text-bullish-400"
                         />
                       </div>
                       <div class="flex-1 min-w-0">
@@ -174,7 +174,7 @@ const finalContent =
                             </>
                           )}
                           <span>•</span>
-                          <span class="text-green-400 font-medium">
+                          <span class="text-bullish-400 font-medium">
                             Article
                           </span>
                           {post.data.topics && (
