--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -72,7 +72,36 @@ const ogImageUrl = "/og_image.png";
     />
   </head>
   <body>
-    <div class="_bg-effect"></div>
+    <div class="fixed inset-0 h-screen w-full -z-10">
+      <svg
+        class="absolute inset-0 h-full w-full"
+        xmlns="http://www.w3.org/2000/svg"
+        aria-hidden="true"
+      >
+        <defs>
+          <pattern
+            id="grid-pattern"
+            width="24"
+            height="24"
+            patternUnits="userSpaceOnUse"
+          >
+            <path
+              d="M 24 0 L 0 0 0 24"
+              fill="none"
+              stroke="#374151"
+              stroke-width="0.5"
+              opacity="0.3"></path>
+          </pattern>
+          <radialGradient id="grid-fade" cx="50%" cy="50%" r="50%">
+            <stop offset="0%" stop-color="black" stop-opacity="0"></stop>
+            <stop offset="60%" stop-color="black" stop-opacity="0"></stop>
+            <stop offset="100%" stop-color="black" stop-opacity="0.8"></stop>
+          </radialGradient>
+        </defs>
+        <rect width="100%" height="100%" fill="url(#grid-pattern)"></rect>
+        <rect width="100%" height="100%" fill="url(#grid-fade)"></rect>
+      </svg>
+    </div>
     <main
       class="mx-auto max-w-(--breakpoint-md) px-4 sm:px-6 md:px-8 my-12 md:my-20"
     >
