--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { marked } from "marked";
   <div class="space-y-20">
     <div>
       <h2 class="text-lg font-bold uppercase tracking-widest">Highlights</h2>
-      <ul class="mt-6 grid grid-cols-1 md:grid-cols-2 gap-6">
+      <ul class="mt-6 grid grid-cols-1 md:grid-cols-2 gap-6 [&>*:last-child]:col-span-2">
         {
           HIGHLIGHTS_HOMEPAGE.map((highlight, idx) => {
             // Assign icons based on content
