--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -164,9 +164,7 @@ const finalContent =
                         )}
 
                         <div class="flex items-center gap-4 text-sm text-text-muted">
-                          {post.data.date && (
-                            <time class="font-mono">{post.data.date}</time>
-                          )}
+                          {post.data.date && <time>{post.data.date}</time>}
                           {post.data.readingTime && (
                             <>
                               <span>•</span>
